# Freeflying-cubic-robot

./: README.md
move_demo/: CMakeLists.txt  package.xml
move_demo/launch/: start_server.launch
move_demo/scripts/: arm_move.py  robot_odom.py  robot_teleop.py  visual_line.py
move_demo/srv/: MoveArm.srv
mrobot_description/: CMakeLists.txt  package.xml
mrobot_description/config/: joint_names_ass_robo_urdf1.yaml
mrobot_description/launch/: display.launch  gazebo.launch
mrobot_description/meshes/: base_link.STL  link1_b.STL  link1_propeller_l.STL  link1_propeller_r.STL  link2_propeller_l.STL  link2_propeller_r.STL  link3_propeller_l.STL  link3_propeller_r.STL  link_b.STL
mrobot_description/urdf/: robot.xacro
mrobot_gazebo/: CMakeLists.txt  package.xml
mrobot_gazebo/launch/: sim_bringup.launch
mrobot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
mrobot_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  mrobot.srdf  ompl_planning.yaml  ros_controllers.yaml
mrobot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  mrobot_moveit_controller_manager.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
